movement in time with tween

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
+		<script src="js/tween.umd.js"></script>
 		<script type="module" src="js/cube.js"></script>
 	</body>
 </html>
