--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		</style>
 	</head>
 	<body>
+		<audio id="audio" preload="auto" style="display: none">
+			<source src="audio.mp3" type="audio/ogg">
 		<script src="js/three.js"></script>
 		<script src="js/tween.umd.js"></script>
 		<script type="module" src="js/cube.js"></script>
