--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<script type="module" src="js/cube.js"></script>
 		<div id="container">
 			<div id="player"></div>
-			<div id="counter">0</div>
+			<div id="debugMenu">
+				<div id="counter" class="debugOpt">0</div>
+				<button id="audioButton" class="debugOpt" type="button">Toggle audio</button>
+			</div>
 		</div>
 	</body>
 </html>
