--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="player"></div>
 			<div id="debugMenu">
 				<h1>Debug menu</h1>
-				<div id="counter" class="debugOpt">0</div>
+				<!-- <div id="counter" class="debugOpt">0</div> -->
 				<button id="audioButton" class="debugOpt" type="button">Toggle audio</button>
 			</div>
 		</div>
