ready for deploy on main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="container">
 			<div id="player"></div>
 			<div id="debugMenu">
-				<h1>Debug menu</h1>
+				<!-- <h1>Debug menu</h1> -->
 				<!-- <div id="counter" class="debugOpt">0</div> -->
 				<button id="audioButton" class="debugOpt" type="button">Toggle audio</button>
 			</div>
