Hidden options menu

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 		<script type="module" src="js/cube.js"></script>
 		<div id="container">
 			<div id="player"></div>
+			<div id="debugHover"> 
+				Options 
+				<div id="debugMenu">
+					<!--  <h1>Debug menu</h1> -->
+					<!-- <div id="counter" class="debugOpt">0</div> -->
+					<button id="audioButton" class="debugOpt" type="button">Toggle audio</button>
+				</div>
+			</div>
 			<div id="startMenu">
 				<h3 class="startOpt">Press play to start!</h3>
 				<button id="playButton" class="startOpt" type="button">Play!</button>
-			</div>
-			<div id="debugMenu">
-				<!-- <h1>Debug menu</h1> -->
-				<!-- <div id="counter" class="debugOpt">0</div> -->
-				<button id="audioButton" class="debugOpt" type="button">Toggle audio</button>
 			</div>
 		</div>
 	</body>
