texture pack selector + cleanup on async load code

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</div>
 			<div id="startMenu">
 				<h3 class="startOpt">Press play to start!</h3>
-				<select class="startOpt" name="mapSelect" id="mapSelect">
-				</select>
+				<select class="startOpt" name="mapSelect" id="mapSelect"></select>
+				<select class="startOpt" name="textureSelect" id="textureSelect"></select>
 				<button id="playButton" class="startOpt" type="button">Play!</button>
 			</div>
 		</div>
